[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Scenes/EndScene.gd" type="Script" id=1]
[ext_resource path="res://Today's_DInner_Picture_Package/Today's_DInner_Picture_Package/2560X1600/3-1.png" type="Texture" id=2]
[ext_resource path="res://Today's_DInner_Picture_Package/Today's_DInner_Picture_Package/2560X1600/3-4.png" type="Texture" id=3]
[ext_resource path="res://Today's_DInner_Picture_Package/Today's_DInner_Picture_Package/2560X1600/3-2.png" type="Texture" id=4]
[ext_resource path="res://Today's_DInner_Picture_Package/Today's_DInner_Picture_Package/2560X1600/3-3.png" type="Texture" id=5]
[ext_resource path="res://src/Scenes/ScenceButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=8]
[ext_resource path="res://src/UserInterface/endsong.tscn" type="PackedScene" id=9]

[node name="EndScene" type="Control"]
theme = ExtResource( 8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end1" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end2" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end3" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end4" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="endsong" parent="." instance=ExtResource( 9 )]

[node name="ScenceButton" parent="." instance=ExtResource( 6 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 640.0
margin_bottom = 400.0
icon = null
next_scene_path = "res://src/Screens/EndScreen.tscn"
